trunk/extension/admin2pp/design/admin2/stylesheets/pagelayout.css
/* ... */
div#contentstructure ul#content_tree_menu ul li.lastli
{
    background:url(../images/h-sprite-43.png) no-repeat 1px -9904px;/*background-image: url(../images/bg_content_tree_li_last.gif);*/
    padding-bottom: 2px;
}

div#contentstructure ul#content_tree_menu li img
{
    vertical-align: middle;
}

div#contentstructure a.nodeicon
{
    margin-left: 0;
    padding-left: 0;
}

div#contentstructure li span.node-name-normal
{
    font-weight: normal;
}

div#contentstructure li.currentnode > a.image-text span.node-name-normal, div#contentstructure li.currentnode > a.image-text span.node-name-hidden, div#contentstructure li.currentnode > a.image-text span.node-name-hiddenbyparent /* Highlighting of current node */
{
    font-weight: bold;
    color: #E24602;
    padding: 0 0.25em 0 0.2em;
}

div#contentstructure li a.image-text span.node-name-hidden, div#contentstructure li.currentnode li a.image-text span.node-name-hidden
{
    font-weight: normal;
    font-style: normal;
    background-color: #ddd;
    padding: 0 0.2em 0 0.2em;
}

div#contentstructure li a.image-text span.node-name-hiddenbyparent, div#contentstructure li.currentnode li a.image-text span.node-name-hiddenbyparent
{
    font-weight: normal;
    font-style: normal;
    background-color: #eee;
    padding: 0 0.2em 0 0.2em;
}

div#contentstructure span.node-hidden, div#contentstructure span.node-hiddenbyparent
{
    display: none;
}

a.openclose, span.openclose
{
    text-decoration: none;
}

a.openclose img, span.openclose img
{
    margin: 0;
    cursor: default;
}

div#contentstructure span.openclose
{
    visibility: hidden;
}

div#contentstructure ul#content_tree_menu ul a.openclose-open, div#contentstructure ul#content_tree_menu ul a.openclose-close, div#contentstructure ul#content_tree_menu ul a.openclose-busy, div#contentstructure ul#content_tree_menu ul a.openclose-error
{
    position: absolute;
    left: 0;
    _left: -20px; /* to fix a bug in IE 6 */
    top: 0;
    width: 16px;
    height: 16px;
    background: transparent url(../images/v-sprite-43.png) no-repeat 0 0;/*url( '../images/content_tree-open.gif' ) no-repeat center center scroll;*/
}

div#contentstructure ul#content_tree_menu ul a.openclose-close
{
    background: transparent url(../images/v-sprite-43.png) no-repeat -21px 0;/*background-image: url( '../images/content_tree-close.gif' );*/
}

div#contentstructure ul#content_tree_menu ul a.openclose-busy
{
    background-image: url( '../images/content_tree-busy.gif' );
    cursor: progress;
}

div#contentstructure ul#content_tree_menu ul a.openclose-error
{
    background: transparent url(../images/v-sprite-43.png) no-repeat -42px 0;/*background-image: url( '../images/content_tree-error.gif' );*/
}

div#contentstructure ul#content_tree_menu div.loaded
{
    display: block;
}

div#contentstructure ul#content_tree_menu div.hidden
{
    display: none;
}



/* POPUP MENU */

div.popupmenu
{
    width: 14em;
    font-size: 0.85em;
    margin: 0px;
    padding: 4px;
    background-color: #fff;
    border: 1px solid #bbb;

    /* These three are essential */
    position: absolute;
    z-index: +1;
    display: none;
}

div.popupmenu div.popupmenuheader
{
    background-color: #fbfbfb;
    border-bottom: 1px solid #bbb;
}

div.popupmenu#EditSubmenu
{
    z-index: +2;
}

div.popupmenu h3
{
    margin: 0;
    padding: 0.2em 0.5em 0.2em 0.5em;
    float: left;
}

div.popupmenu div.window-close
{
    float: right;
    padding: 1px;
}

div.popupmenu div.window-close p
{
    margin: 0;
    color: #000000;
    font-weight: bold;
    background-color: #ecece4;
    padding: 0.1em 0.3em 0.1em 0.3em;
    border: 1px solid #ffffff;
    border-bottom-color: #bfbeb6;
    border-right-color: #bfbeb6;
}

div.popupmenu a
{
    color: #000000;
    padding: 0.1em 0.3em 0.1em 0.3em;
    text-decoration: none;
    cursor: default;
    display: block;
}

div.popupmenu a.more
{
    background:url(../images/h-sprite-43.png) no-repeat right -10358px;/*background-image: url(../images/more-arrow.gif);
    background-repeat: no-repeat;
    background-position: right center;*/
}

div.popupmenu a.menu-item-disabled
{
    color: #CECECE;
}

div.popupmenu a:hover
{
    color: #ffffff;
    background-color: #2d537a;
    text-decoration: none;
    cursor: default;
}

div.popupmenu hr
{
    border: none;
    border-top: 1px solid #c0c0c0;
}



/* BOX MODEL */

.box-content div.context-toolbar.block
{
    padding: 0 0.5em 0 0.5em;
}

.box-ml
{
    /*padding: 0.2em;*/
}

.box-bc .box-ml, .box-header .box-ml
{
    padding: 0.1em 0em 0.1em 0em; /* 0.1 needed to avoid gaps in border */
}

#controlbar-top .box-bc
{
    margin-top: 0.5em;
}

#controlbar-top .box-bc .box-ml
{
    margin: 0px 3px 0px 3px;
    padding: 0.5em;
}

h1.context-title
{
    font-size: 1.4em;
}

h2.context-title
{
    font-size: 1.2em;
}

div.context-information, span.classattribute-description
{
    color: #333;
    font-size: 0.8em;
    padding: 0 0.5em 0 0.5em;
    margin-bottom: 10px;
}

span.classattribute-description, p.class-description
{
    font-weight: normal;
    white-space: normal;
    padding-left: 1em;
    min-height: 15px;
}

span.classattribute-description:hover, p.class-description:hover, div.context-information p:hover
{
    color: #111;
}

div.context-information p.left
{
    width: 48.5%;
    float: left;
}

div.context-information p.right
{
    width: 48.5%;
    float: right;
    text-align: right;
}

div.context-information p.center
{
    text-align: center;
    margin: 0 auto 0 auto;
    padding: 0.3em 0 0.3em 0;
}


div.content-navigation div.context-information p.left
{
    width: 68%;
}

div.content-navigation div.context-information p.right
{
    width: 30%;
}

div.context-block
{
    margin-bottom: 1.5em;
}

div.context-block h1.context-title img, div.context-block h2.context-title img
{
    vertical-align: middle;
}

/* MENU-BLOCK */

.menu-block ul
{
    width: 100%;
    margin: 0.5em 0 0 0;
}
/* ... */

